--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "chalk": "^4.1.2",
     "commander": "^8.2.0",
     "eslint-plugin-node": "^11.1.0",
-    "keccak256": "^1.0.3"
+    "crypto": "^1.0.1"
   }
 }
